fix card stat item wrap on mobile

--- a/src/CardSection.css
+++ b/src/CardSection.css
@@ -146,6 +146,11 @@
 .Card-stat {
   color: gray;
   font-size: 10pt;
+  margin-top: 5px;
+  flex-wrap: wrap;
+}
+
+.Card-stat-item {
   margin-top: 10px;
 }
 
